Fix small z-index bug with modal

--- a/client/src/components/Modal/_modal.scss
+++ b/client/src/components/Modal/_modal.scss
@@ -1,5 +1,5 @@
 .modal {
-  @apply w-full h-full fixed top-0 left-0 bg-overlay flex items-center justify-center text-text;
+  @apply w-full h-full fixed top-0 left-0 bg-overlay flex items-center justify-center text-text z-50;
 
   &__content {
     @apply max-h-full w-4/5 md:w-1/2 lg:w-1/3 rounded-sm overflow-auto flex flex-col bg-white;
@@ -9,7 +9,7 @@
     }
 
     &--header {
-      @apply flex items-center py-2 px-3 sticky top-0 z-10;
+      @apply flex items-center py-2 px-3 sticky top-0 z-50;
 
       h1 {
         @apply text-center text-lg;
